# balanced_calendar_agent

./: .gitignore  README.md  docker-compose.yml  main.py
agent/mcp_client_server/: server.py
agent/utils/: prompts.py
backend/: Makefile  README.md  main.go  pyproject.toml  sample.py
backend/Agents/: PlannerAgent.go
backend/app/: __init__.py  routes.py
backend/app/agent/: PlannerAgent.py  main.py
backend/app/agent/utils/: OpenAIClient.py
backend/app/calendar/: controllers.py  decorators.py  services.py  utils.py
backend/app/calender/: controllers.py  services.py
backend/app/chat/: PlannerAgent.py  controllers.py  decorators.py  models.py  services.py
backend/app/chat/agent/mcp_client_server/: server.py
backend/app/chat/agent/mcp_client_server/sources/: event_brite_events.py  luma_events.py
backend/app/chat/agent/utils/: Executor.py  schemas.py
backend/app/chat/utils/: formaters.py  prompts.py  schemas.py  tool_definitions.py  tools.py
backend/mcp_client_server/: pyproject.toml  server.py
backend/migrations/versions/: 0160c53a77a5_updated_tool_call_model.py  06abe0a44735_update_to_use_int_for_ids.py  6a3140617bb2_created_chat_messages.py  baa61e11d7a3_add_chat_sessions_table.py
frontend/src/: App.tsx
frontend/src/api/: calendar.ts
frontend/src/components/: EditProfile.tsx
frontend/src/components/Auth/: AuthForm.tsx  LoginForm.tsx  SignUpForm.tsx
frontend/src/css/: index.css
frontend/src/data/: ProjectLogo.ts  ProjectName.ts
frontend/src/pages/: Auth.tsx  Calendar.tsx
frontend/src/types/: Chat.ts  Event.ts
(+12 files in other folders)
